--- a/spring-security-saml2-sample/pom.xml
+++ b/spring-security-saml2-sample/pom.xml
@@ -1,25 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.springframework.security.extensions</groupId>
-  <artifactId>spring-security-saml2-sample</artifactId>
+  <artifactId>spring-security-saml2-soa</artifactId>
   <packaging>war</packaging>
   <version>1.0.0.RELEASE-SNAPSHOT</version>
-  <name>Spring Security SAML v2 sample webapp</name>
-  <description>Spring Security SAML v2 sample webapp</description>
-  <url>https://github.com/SpringSource/spring-security-saml</url>
-  <organization>
-    <name>SpringSource</name>
-    <url>http://springsource.org/spring-security-saml</url>
-  </organization>
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
+  <name>Spring Security SAML v2 Test webapp</name>
+  <description>Spring Security SAML v2 Test webapp</description>
+  
   <mailingLists>
     <mailingList>
       <name>Spring Security SAML Forum</name>
@@ -27,28 +17,7 @@
       <archive>http://forum.springsource.org/forumdisplay.php?86-SAML</archive>
     </mailingList>
   </mailingLists>
-  <developers>
-    <developer>
-      <id>vschafer</id>
-      <name>Vladimir Schafer</name>
-      <email>vladimir.schafer at gmail.com</email>
-      <timezone>+2</timezone>
-    </developer>
-  </developers>
-  <contributors>
-    <contributor>
-      <name>Mandus Elfvingr</name>
-    </contributor>
-    <contributor>
-      <name>Rob Moore</name>
-    </contributor>
-    <contributor>
-      <name>Jonathan Tellier</name>
-    </contributor>
-    <contributor>
-      <name>Wade Dorrell</name>
-    </contributor>
-  </contributors>
+
   <issueManagement>
     <system>jira</system>
     <url>http://jira.springsource.org/browse/SES</url>
